--- a/front_end/src/chat.css
+++ b/front_end/src/chat.css
@@ -1,12 +1,6 @@
 .box {
-  display: flex;
-  align-items: center;
-  height: 30px;
-  width: 300px;
-
-  border: none;
+  border: 2px solid gray;
   border-radius: 5px;
-  background-color: gray;
 }
 
 .alert {
